# SVD-Image-compressor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  compile_commands.json  main.cpp  my_file.txt
